--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+.root {
+    display: table;
+    width: 100%
+}
+.app {
+    display: table-cell;
+    width: 50%;
+}
+
 .App {
     color: pink;
 }
