--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@
     margin-bottom: 20px;
 }
 .data.loading {
+    transition: 2s ease;
+    color: yellow;
+}
+.data-notloaded {
     color: grey;
 }
 .SomeComponent {
